--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,12 @@
+.ng-grid, .ac-chart {
+    width: 100%;
+}
+
 .ng-grid {
     border: 1px solid rgb(212,212,212);
-    width: 100%;
     height: 154px;
+}
+
+.ac-chart {
+    height: 250px;
 }
